Fix scrollbars on sidebars

--- a/webapp/src/styles/ui-components.scss
+++ b/webapp/src/styles/ui-components.scss
@@ -315,7 +315,7 @@
 }
 
 .sidebar {
-  width: 248px;
+  width: 258px;
   padding: 12px 9px;
 }
 
